@@ -1,3 +1,15 @@
+2013-09-25  Anders Carlsson  <andersca@apple.com>
+
+        HasMemoryCostMemberFunction should work for final classes
+        https://bugs.webkit.org/show_bug.cgi?id=121747
+
+        Reviewed by Sam Weinig.
+
+        Use decltype to check for the memoryCost() member function. This doesn't check that the return type is size_t, but
+        the build will fail anyway if that's the case (or if the return type is not convertible to size_t).
+
+        * bindings/js/JSDOMBinding.h:
+
 2013-09-25  Brady Eidson  <beidson@apple.com>
 
         More refactoring to make the LevelDB dependencies of IDB more obvious.
